--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "publisher": "GracefulPotato",
     "displayName": "RBS Syntax Highlighting",
     "description": "Syntax highlighting for .rbs",
+    "icon": "images/icon.png",
     "version": "0.0.1",
     "repository": {
         "type": "git",
