--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "displayName": "RBS Syntax Highlighting",
     "description": "Syntax highlighting for .rbs",
     "icon": "images/icon.png",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "repository": {
         "type": "git",
         "url": "https://github.com/graceful-potato/vscode-rbs-syntax"
@@ -17,16 +17,25 @@
         "Programming Languages"
     ],
     "contributes": {
-        "languages": [{
-            "id": "rbs",
-            "aliases": ["rbs", "rbs"],
-            "extensions": [".rbs"],
-            "configuration": "./language-configuration.json"
-        }],
-        "grammars": [{
-            "language": "rbs",
-            "scopeName": "source.rbs",
-            "path": "./syntaxes/rbs.tmLanguage.json"
-        }]
+        "languages": [
+            {
+                "id": "rbs",
+                "aliases": [
+                    "rbs",
+                    "rbs"
+                ],
+                "extensions": [
+                    ".rbs"
+                ],
+                "configuration": "./language-configuration.json"
+            }
+        ],
+        "grammars": [
+            {
+                "language": "rbs",
+                "scopeName": "source.rbs",
+                "path": "./syntaxes/rbs.tmLanguage.json"
+            }
+        ]
     }
 }
