Implement test. Change class rule. Fix comments without indentation in type alias, type declaration, attr_* declaration and def declaration. Add comments inside brackets. Remove duplicate variable.other.constant.rbs scope.

--- a/package.json
+++ b/package.json
@@ -37,5 +37,11 @@
                 "path": "./syntaxes/rbs.tmLanguage.json"
             }
         ]
+    },
+    "scripts": {
+        "test": "vscode-tmgrammar-test -s source.rbs -g syntaxes/rbs.tmLanguage.json -t \"test/**/*.rbs\""
+    },
+    "devDependencies": {
+        "vscode-tmgrammar-test": "^0.0.11"
     }
 }
